tests/snippets/invalid_snippets/incomplete_snippet.snippet
<!
  (
    "log",
    title="Log Message",
    description="Logs a Message to the console"
>

